Enhance examples for Enum Suppliers